@@ -86,9 +86,6 @@ _(" --http-user=USER             Set HTTP user. This affects all URLs.")
 _(" --http-passwd=PASSWD         Set HTTP password. This affects all URLs.")
 #define TEXT_PROXY_METHOD \
 _(" --proxy-method=METHOD        Set the method to use in proxy request.")
-#define TEXT_HTTP_AUTH_SCHEME \
-_(" --http-auth-scheme=SCHEME    Set HTTP authentication scheme. Currently, basic\n"\
-  "                              is the only supported scheme.")
 #define TEXT_REFERER \
 _(" --referer=REFERER            Set Referer. This affects all URLs.")
 #define TEXT_FTP_USER \
