@@ -1,5 +1,13 @@
 2009-11-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Removed --http-auth-scheme option since it doesn't do nothing.
+	* src/OptionHandlerFactory.cc
+	* src/prefs.cc
+	* src/prefs.h
+	* src/usage_text.h
+
+2009-11-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Adjusted the number of peer info which get_peers reply message can
 	carry.
 	* src/DHTGetPeersReplyMessage.cc
